k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-exploration
spec:
  type: ClusterIP
  selector:
    app: space-exploration
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
