k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-space-exploration-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    networking.gke.io/managed-certificates: "api-space-exploration-certificate"
spec:
  rules:
  - host: "api-space-exploration.history-from-the-frontier.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-space-exploration
            port:
              number: 8080
